--- a/src/style/components/_sidebar.scss
+++ b/src/style/components/_sidebar.scss
@@ -1,20 +1,19 @@
-.siderbar {
-    background-color: rgb(36, 36, 47);
-    @include position(fixed, 0, 0, 0, 2);
-    @include box(25rem, 100%);
-    ul {
-        margin-top: 6rem;
-        li {
-            a { 
-                padding: 0 3rem 0 3rem;
-                @include text(1.3rem, 600, #8c8c8e,3rem);
-                transition: .5s ease;
-                &:hover{
-                    color: white;
-                    margin-left: 1rem;
-                }
-            }
-            
+.sidebar {
+  background-color: rgb(36, 36, 47);
+  @include position(fixed, 0, 0, 0, 2);
+  @include box(25rem, 100%);
+  ul {
+    margin-top: 6rem;
+    li {
+      a {
+        padding: 0 3rem 0 3rem;
+        @include text(1.3rem, 600, #8c8c8e, 3rem);
+        transition: 0.5s ease;
+        &:hover {
+          color: white;
+          margin-left: 1rem;
         }
-    }  
+      }
+    }
+  }
 }
