--- a/src/_globals.scss
+++ b/src/_globals.scss
@@ -7,3 +7,5 @@
 @import "./style/components/header";
 @import "./style/components/footer";
 @import "./style/components/sidebar";
+@import "./style/page/Homepage/homepage";
+@import "./style/components/aside";
