--- a/src/style/components/_mainLayout.scss
+++ b/src/style/components/_mainLayout.scss
@@ -1,9 +1,9 @@
 .main-layout{
     background-color:rgba(30,30,40,.88);
     width: auto;
-    height: 99vh; // demo
-    overflow: visible;
+    height: auto;
     padding: 1.5rem;
     color: white;
     font-size: 1.8rem;
+    display: flex;
 }
