--- a/src/style/utils/_base.scss
+++ b/src/style/utils/_base.scss
@@ -3,6 +3,9 @@ html {
     font-size: 62.5%;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+* {
+    box-sizing: border-box;
+}
 *:before,
 *:after {
     box-sizing: border-box;
