--- a/src/_globals.scss
+++ b/src/_globals.scss
@@ -9,3 +9,7 @@
 @import "./style/components/sidebar";
 @import "./style/page/Homepage/homepage";
 @import "./style/components/aside";
+
+@import "./style/page/Homepage/cardServices";
+@import "./style/page/Homepage/cardPrice";
+@import "./style/page/Homepage/cardRecomment";
