--- a/src/style/components/_aside.scss
+++ b/src/style/components/_aside.scss
@@ -1,15 +1,18 @@
 .aside {
+    background: linear-gradient(
+        159deg,
+        rgba(37, 37, 50, 0.98) 0,
+        rgba(35, 35, 45, 0.98) 100%
+    );
     box-sizing: border-box;
-    @include box(29rem, calc(100vh - 3rem));
-    min-width: 29rem;
+    width: 29rem;
+    &_fixed {
+        position: fixed;
+    }
     .header {
         padding: 3rem;
         @include box(100%, 23.5rem);
-        background: linear-gradient(
-            159deg,
-            rgba(37, 37, 50, 0.98) 0,
-            rgba(35, 35, 45, 0.98) 100%
-        );
+
         &-avt {
             @include box(9rem, 9rem);
             border-radius: 50%;
@@ -63,35 +66,91 @@
         &-name {
             text-align: center;
             a {
-                @include text(1.4rem, bold, #fafafc);
+                @include text(1.8rem, bold, #fafafc);
             }
         }
         &-job {
+            margin-top: 1rem;
             text-align: center;
             @include text(1.3rem, 400, #8c8c8e);
         }
     }
     &-middle {
         padding: 0 1.5rem 0 1.5rem;
+        width: 29rem;
         background-color: #212529;
         overflow-y: scroll;
         max-height: 80vh;
+        transition: 0.3s ease-in;
         -ms-overflow-style: none;
         scrollbar-width: none;
+        @include text(1.5rem, 400, #545454, 3rem);
         &::-webkit-scrollbar {
             display: none;
         }
-        @include box(100%, calc(100vh - 30rem));
         .scrollbar {
             @include box(100%, calc(100vh - 10rem));
-            .art-table{
-                ul li{
-                    h6{
-                        width:1rem;
+            .art-table,
+            .art-skillbar {
+                border-bottom: 1px solid #59595b;
+                padding: 1rem 0 1rem 0;
+                ul li {
+                    display: flex;
+                    flex-wrap: wrap;
+                    @include text(1.5rem, 400, #8c8c8e);
+                    span {
+                        display: block;
                     }
-                    display:flex;
-                    justify-content: space-around;
-                    @include text(1.3rem, 400, #8c8c8e);
+                }
+            }
+            .art-table ul li {
+                h5 {
+                    width: 60%;
+                }
+            }
+            .art-skillbar {
+                ul li {
+                    margin: 1rem 0 1rem 0;
+                    h5 {
+                        width: 85%;
+                    }
+                }
+            }
+            .bar-item::after {
+                margin: 0.5rem 0 0.5rem 0;
+                display: block;
+                height: 0.2rem;
+                width: 100%;
+                background-color: #ffc107;
+                content: "";
+            }
+            .art-skill {
+                border-bottom: 1px solid #59595b;
+                padding: 1rem 0 1rem 0;
+                svg {
+                    color: #ffc107;
+                    font-weight: bold;
+                    margin-right: 0.5rem;
+                }
+            }
+            .art-cv {
+                padding: 2rem 0;
+                display: flex;
+                align-items: center;
+                gap: 5px;
+                a {
+                    color: gray;
+                    font-weight: 500;
+                }
+                svg {
+                    color: gray;
+                    font-size: 2rem;
+                }
+                &:hover a,
+                &:hover svg {
+                    text-shadow: 2px 2px 2px gray;
+                    color: white;
+                    transition: 0.3s ease-in;
                 }
             }
         }
