--- a/src/style/components/_mainLayout.scss
+++ b/src/style/components/_mainLayout.scss
@@ -7,7 +7,7 @@
     font-size: 1.8rem;
     display: flex;
     .outlet_layout {
-        width: calc(100vw- 700px);
+        // width: calc(100vw- 700px);
     }
 }
 .swiper-button-next::after,.swiper-button-prev::after{
